# 2526_TI301I6_PRJ_GRP8

./: .gitignore  CMakeLists.txt  README.md
data/: example1.mmd  example1.txt  example2.txt  example2_hasse.mmd
include/: adj_list.h  export_mermaid.h  hasse.h  markov_check.h  matrix.h  partition.h  tarjan.h
interface/: sdl_test.c  sdl_weather.c
src/: adj_list.c  export_mermaid.c  hasse.c  main.c  main_part1.c  main_part2.c  main_part3.c  markov_check.c  matrix.c  partition.c  tarjan.c
test/: test_adj_list.c
